--- a/style.css
+++ b/style.css
@@ -274,3 +274,49 @@ footer ul {
 footer a {
   color: white;
 }
+
+.card-block {
+  border-radius: 10px;
+  width: 75%;
+  margin: 0px auto;
+  margin-top: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.card-block > img {
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card-block > .content {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.infor-item table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  font-size: 14px;
+  padding: 5px 10px;
+}
+
+.infor-item thead {
+  color: white;
+  font-weight: 400;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 91, 170, 1) 0%,
+    rgba(0, 148, 218, 1) 50%,
+    rgba(0, 91, 170, 1) 100%
+  );
+}
+
+.infor-item th {
+  padding: 10px 10px;
+}
