--- a/style.css
+++ b/style.css
@@ -517,6 +517,42 @@ td {
   }
 }
 
+.float-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  z-index: 100;
+}
+
+.floating-btn {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  align-items: center;
+  height: 60px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+
+.floating-btn:hover {
+  background-color: #0056b3;
+  transform: scale(1.1);
+}
+
+.floating-btn:active {
+  transform: scale(0.9);
+}
+
 .item-entry p {
   line-height: 150% !important;
 }
