--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 .logo {
   width: 209px;
   height: 28.55px;
+  cursor: pointer;
 }
 
 .phone-logo {
@@ -799,6 +800,7 @@ td {
   .logo {
     width: 197px;
     height: 23.55px;
+    cursor: pointer;
   }
 
   .contact-title {
