--- a/style.css
+++ b/style.css
@@ -527,7 +527,23 @@ td {
   display: flex;
   gap: 10px;
   flex-direction: column;
+  align-items: end;
   z-index: 100;
+}
+
+.registry-button {
+  padding: 10px;
+  border-radius: 50px;
+  background: #0056b3;
+  color: white;
+  font-size: 20px;
+  border: 1px solid white;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+
+.registry-button:hover {
+  transform: scale(1.1);
 }
 
 .floating-btn {
