fix: footer container styling

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,7 +5,7 @@
       alt="Bảo Việt Logo">
   </div>
 
-  <div class="infor-wrapper">
+  <div class="footer-container">
     <div class="infor-col">
       <p class="title">Thông tin liên hệ</p>
       <ul>
