fix: new template engine

--- a/templates/news/article.html
+++ b/templates/news/article.html
@@ -66,10 +66,10 @@
   {
     "@context": "https://schema.org",
     "@type": "Article",
-    "headline": "{{title}}",
-    "description": "{{meta.description}}",
+    "headline": {{json title}},
+    "description": {{json meta.description}},
     {{#if meta.image}}
-    "image": "{{meta.image}}",
+    "image": {{json meta.image}},
     {{/if}}
     "author": {
       "@type": "Organization",
